fixed footer on small screens

--- a/_scss/icaredata-layout.scss
+++ b/_scss/icaredata-layout.scss
@@ -259,7 +259,7 @@ section#partners {
     }
 }
 
-footer #footer-container{ 
+footer #footer-container { 
     &:before { 
         content:''; 
         left: 10%;
@@ -279,17 +279,14 @@ footer #footer-container{
             height: 100px;
         }
         #shr-text { 
+            display: inline-block;
+            margin-top: 30px;
             p { 
                 margin-bottom: 0;
                 &.shr-title { 
                     font-weight: bolder;
                     color: $clr-primary;
                 }
-            }
-        }
-        #shr-text { 
-            display: inline-block;
-            margin-top: 30px;
             .heading {
                 font-weight: bold;
                 font-size: $md-font-size;
@@ -347,6 +344,22 @@ footer #footer-container{
                     margin: 10px 0 10px 20px;   
                 }
             }
+        }
+    }
+    footer #footer-container { 
+        #shr-footer {  
+            img#shr-logo-footer { 
+                height: 80px;
+            }
+            #shr-text { 
+                margin-top: 20px;
+                p { 
+                    font-size: $sm-font-size;
+                }
+            }
+        }
+        #mitre-logo { 
+            width: 135px;
         }
     }
 }
@@ -446,6 +459,7 @@ footer #footer-container{
         }
         #shr-footer {  
             img#shr-logo-footer { 
+                height: 100px;
                 padding: 0;
                 display: block;
                 float:none; 
@@ -460,6 +474,7 @@ footer #footer-container{
             }
         }
         #mitre-logo { 
+            width: 135px;
             padding: 20px 0 0 0;
         }
     }
